--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/EdoSalas/TypeScript_Guide#readme",
   "dependencies": {
     "apidoc": "^0.28.1",
+    "class-transformer": "^0.5.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "nodemon": "^2.0.20",
