--- a/apidoc/api_project.json
+++ b/apidoc/api_project.json
@@ -1,15 +1,15 @@
 {
-  "name": "Tennis Club Costa Rica",
+  "name": "TypeScript Guide",
   "version": "0.1.0",
-  "description": "Tennis Club Costa Rica Project",
-  "title": "Tennis Club Costa Rica",
-  "url": "http://34.228.96.60:3600",
+  "description": "TypeScript Guide Project",
+  "title": "TypeScript Guide",
+  "url": "",
   "sampleUrl": false,
   "defaultVersion": "0.0.0",
   "apidoc": "0.3.0",
   "generator": {
     "name": "apidoc",
-    "time": "2021-12-23T15:26:30.518Z",
+    "time": "2022-10-13T23:09:56.183Z",
     "url": "https://apidocjs.com",
     "version": "0.28.1"
   }
